--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,33 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+h1, p {
+  margin: 0;
+  padding: 0;
+}
+#root {
+  border: 1px #000 solid;
+  height: 100vh;
+}
+.App {
+  padding: 30px;
+  margin: 10px;
+  border: 10px;
+  border: 5px #000 solid;
+  text-align: center;
+  height: calc(100% - 20px);
+}
+.InputField {
+  margin: 10px 10px 40px 10px;
+}
+input {
+  border: 1px #000 solid;
+  width: 50%;
+  height: 30px;
+  line-height: 30px;
 }
