--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-h1, p {
+h1, h2, h3, p, ul {
   margin: 0;
   padding: 0;
+}
+ul, li {
+  list-style: none;
 }
 #root {
   border: 1px #000 solid;
